--- a/analysis/license.Rmd
+++ b/analysis/license.Rmd
@@ -7,8 +7,10 @@ editor_options:
   chunk_output_type: console
 ---
 
-What license are you using for your code? See [choosealicense.com][choose] for
-help deciding. It's a convention to save a file `LICENSE` in the root of your
+Using the [MIT License](https://choosealicense.com/licenses/mit/) for
+this software.
+
+It's a convention to save a file `LICENSE` in the root of your
 Git repo that contains the license text.
 
 What license are you using for the written content on your site? It is
